--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap");
+
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
 	font-family: "IBM Plex Mono", sans-serif;
 	background-color: #f7f7f7;
