--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -1,14 +1,14 @@
 .card {
 	display: flex;
+	width: 100vw;
+	height: 100vh;
+	margin: 40px;
 	flex-direction: column;
-	width: 500px;
-	height: 100%;
+	border: 4px solid #222;
 	align-items: center;
-	margin-top: 100px;
-	border: solid 4px red;
-	border-radius: 10px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	-ms-border-radius: 10px;
-	-o-border-radius: 10px;
+	padding: 40px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
 }
