--- a/src/components/Layout/index.module.scss
+++ b/src/components/Layout/index.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	height: 90%;
+	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
